# git

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix
android-project/: local.properties
android-project/app/: build.gradle
assets/: begin.anm2  pivot.anm2  slop.anm2  title.anm2  title_begin.anm2  title_quit.anm2
assets/event/: actor1.anm2  event1.csv  event1.tsv  event_bg.anm2
narabotki/: Story
src/: main.cpp
src/game/: anm2.cpp  anm2.hpp  anm2data.cpp  anm2data.hpp  anm2sprite.cpp  anm2sprite.hpp  anm2state.hpp  audiomanager.hpp  dialogueholder.hpp  dialoguescene.cpp  dialoguescene.hpp  eventscene.cpp  eventscene.hpp  fs.hpp  game.cpp  game.hpp  inputmanager.hpp  manager.cpp  manager.hpp  rendermanager.cpp  rendermanager.hpp  scene.hpp  scenemanager.cpp  scenemanager.hpp  testscene.cpp  testscene.hpp  testscene2.cpp  testscene2.hpp  texmanager.cpp  texmanager.hpp  titlescene.cpp  titlescene.hpp
src/game/common/: vector.hpp
src/game/engine/: engine.hpp
src/game/event/: eventholder.cpp  eventholder.hpp
